# Poetry settings
[tool.poetry]
name = "ronbun"
description = "The Sample Programs README Automation Tool"
version = "0.9.0"
license = "MIT"

authors = [
    "Jeremy Grifski <jeremy.grifski@therenegadecoder.com>"
]

readme = "README.md"
homepage = "https://therenegadecoder.com"
repository = "https://github.com/TheRenegadeCoder/sample-programs-readmes"

classifiers=[
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
snakemd = "^2.2.0"
subete = "^0.20.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.2"
pytest = "^6.2"
pytest-cov = "^2.12"

[tool.poetry.scripts]
ronbun = 'ronbun.readme:main'

# Build system settings
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"