# Poetry settings
[project]
name = "ronbun"
description = "The Sample Programs README Automation Tool"
version = "0.10.1"
license = "MIT"

authors = [
    {name = "Jeremy Grifski", email = "jeremy.grifski@therenegadecoder.com>"}
]

classifiers=[
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License"
]

dynamic = ["classifiers"]

readme = "README.md"

requires-python = ">=3.10,<4"
dependencies = [
    "snakemd (>=2.4.0,<3)",
    "subete (>=0.21.0,<0.22)"
]

[project.urls]
homepage = "https://therenegadecoder.com"
repository = "https://github.com/TheRenegadeCoder/sample-programs-readmes"

[dependency-groups]
test = [
    "coverage (>=7.11.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry.scripts]
ronbun = "ronbun.readme:main"

# Build system settings
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"